fixed a whitespace problem; use Devtools monospace font

--- a/browser/devtools/shared/widgets/mdn-docs.css
+++ b/browser/devtools/shared/widgets/mdn-docs.css
@@ -28,6 +28,10 @@ header, footer {
   transition: opacity 400ms ease-in;
 }
 
+#syntax {
+  margin-top: 1em;
+}
+
 .devtools-throbber {
   opacity: 0;
   align-self: center;
